[package]
name = "rdma-sys"
version = "0.3.0"
authors = ["Pu Wang <nicolas.weeks@gmail.com>"]
edition = "2021"
description = "Rdma ibverbs lib Rust binding"
license-file = "LICENSE"
repository = "https://github.com/datenlord/rdma-sys"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.172"
memoffset = "0.9.1"
paste = "1.0.15"

[build-dependencies]
bindgen = "0.71.1"
pkg-config = "0.3.32"
